--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </body>
 <h2>hello</h2>
-<h1>muhammad aoun shabbir</h1>
+<h1>muhammad aoun Shabbir</h1>
 <h2>good person</h2>
 <h3>we can merged the file</h3>
 </html>
